// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`toy-framework.server root / route returns a response 1`] = `
"<!DOCTYPE HTML>
<HTML lang=en>
<script type="importmap">{
  "imports": {
    "bun": "/!/externals:bun.mjs",
    "react": "/!/externals/react.mjs",
    "react-dom": "/!/externals/react-dom.mjs",
    "react-dom/client": "/!/externals/react-dom:client.mjs",
    "react-server-dom-webpack/client": "/!/externals/react-server-dom-webpack:client.mjs",
    "react/jsx-dev-runtime": "/!/externals/react:jsx-dev-runtime.mjs",
    "react/jsx-runtime": "/!/externals/react:jsx-runtime.mjs"
  }
}</script>
<head>
<title>Hello from /HTMLPageRootLayout.tsx</title>
<link rel="modulepreload" href="/!/polyfillsAndStuff.mjs"/>
<link rel="modulepreload" href="/!/externals/clientEntryPoint.externals.mjs"/>
<link rel="modulepreload" href="/!/externals/react.mjs"/>
<link rel="modulepreload" href="/!/externals/react-dom.mjs"/>
<link rel="modulepreload" href="/!/externals/react-dom:client.mjs"/>
<link rel="modulepreload" href="/!/externals/react-server-dom-webpack:client.mjs"/>
<link rel="modulepreload" href="/!/externals/react:jsx-dev-runtime.mjs"/>
<link rel="modulepreload" href="/!/externals/react:jsx-runtime.mjs"/>
<link rel="modulepreload" href="/!/clientEntryPoint/clientEntryPoint.mjs"/>
<link rel="modulepreload" href="/!/use-client/example0.client.mjs"/>
</head>
<body>
<h1>Hello from <!-- -->/HTMLPageRootLayout.tsx</h1>
<div id="root">
<div data-id="NOT-generated-by-client">pre-rendered by server in <code>/HTMLPageRootLayout.tsx</code>
</div>
</div>
<script type="module" src="/!/polyfillsAndStuff.mjs">
</script>
<script type="module" src="/!/externals/clientEntryPoint.externals.mjs">
</script>
<script type="module" src="/!/clientEntryPoint/clientEntryPoint.mjs">
</script>
</body>
</HTML>"
`;

exports[`toy-framework.server /rsc/test-suspense returns RSC content 1`] = `
"1:"$Sreact.suspense"
2:D{"name":"AsyncView","env":"Server"}
3:D{"name":"AsyncView","env":"Server"}
0:["$","div",null,{"children":["hi",["$","$1",null,{"fallback":["$","div",null,{"children":"loading..."}],"children":["$L2","$L3"]}]]}]
2:["$","div",null,{"id":"AsyncView0","children":["slept for ",0,"ms"]}]
3:["$","div",null,{"id":"AsyncView10","children":["slept for ",10,"ms"]}]
"
`;

exports[`toy-framework.server /rsc/test-suspense-render returns RSC content 1`] = `
"<!DOCTYPE HTML>
<HTML lang=en>
<script type="importmap">{
  "imports": {
    "bun": "/!/externals:bun.mjs",
    "react": "/!/externals/react.mjs",
    "react-dom": "/!/externals/react-dom.mjs",
    "react-dom/client": "/!/externals/react-dom:client.mjs",
    "react-server-dom-webpack/client": "/!/externals/react-server-dom-webpack:client.mjs",
    "react/jsx-dev-runtime": "/!/externals/react:jsx-dev-runtime.mjs",
    "react/jsx-runtime": "/!/externals/react:jsx-runtime.mjs"
  }
}</script>
<head>
<title>Hello from /HTMLPageRootLayout.tsx</title>
<link rel="modulepreload" href="/!/polyfillsAndStuff.mjs"/>
<link rel="modulepreload" href="/!/externals/clientEntryPoint.externals.mjs"/>
<link rel="modulepreload" href="/!/externals/react.mjs"/>
<link rel="modulepreload" href="/!/externals/react-dom.mjs"/>
<link rel="modulepreload" href="/!/externals/react-dom:client.mjs"/>
<link rel="modulepreload" href="/!/externals/react-server-dom-webpack:client.mjs"/>
<link rel="modulepreload" href="/!/externals/react:jsx-dev-runtime.mjs"/>
<link rel="modulepreload" href="/!/externals/react:jsx-runtime.mjs"/>
<link rel="modulepreload" href="/!/clientEntryPoint/clientEntryPoint.mjs"/>
<link rel="modulepreload" href="/!/use-client/example0.client.mjs"/>
</head>
<body>
<h1>Hello from <!-- -->/HTMLPageRootLayout.tsx</h1>
<div id="root">
<div data-id="NOT-generated-by-client">pre-rendered by server in <code>/HTMLPageRootLayout.tsx</code>
</div>
</div>
<script type="module" src="/!/polyfillsAndStuff.mjs">
</script>
<script type="module" src="/!/externals/clientEntryPoint.externals.mjs">
</script>
<script type="module" src="/!/clientEntryPoint/clientEntryPoint.mjs">
</script>
<h2>Howdy!</h2>
<h3>testing RSC</h3>
<div id="rsc-root">
</div>
<script type="module">;(async function main() {
    console.log("running", import.meta.url);
    const React = (await import("react")).default;
    console.log("react@" + React.version);
    const ReactDOMClient = (await import("react-dom/client")).default;
    const ReactServerDOMClient = (await import("react-server-dom-webpack/client")).default;
    console.log(ReactServerDOMClient);
    const rscResponse = await fetch(new Request(\`/rsc/test-suspense\`, { headers: { Accept: "text/x-component" } }));
    const decoder = new TextDecoder;
    const reader = rscResponse.body.getReader();
    while (true) {
      const { done, value } = await reader.read();
      if (done)
        break;
      console.log(decoder.decode(value));
    }
    const root = ReactDOMClient.createRoot(document.getElementById("rsc-root"));
    const ui = await ReactServerDOMClient.createFromFetch(fetch(new Request(\`/rsc/test-suspense\`, { headers: { Accept: "text/x-component" } })), {
      async callServer(id, args) {
        throw new Error("not implemented");
      },
      encodeFormAction(id, args) {
        return {
          name: "my-awesome-form",
          action: "/rsc/test-suspense",
          method: "POST",
          data: new FormData
        };
      }
    });
    root.render(ui);
  })();</script>
</body>
</HTML>"
`;
